Fixed design issues

--- a/app/src/main/res/layout/fragment_club_manager_create_form_page.xml
+++ b/app/src/main/res/layout/fragment_club_manager_create_form_page.xml
@@ -89,8 +89,10 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:inputType="text"
-                android:paddingLeft="8dp"
-                android:textSize="12sp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView65" />
@@ -123,7 +125,9 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:inputType="textMultiLine"
-                android:paddingLeft="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -155,7 +159,9 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:inputType="textMultiLine"
-                android:paddingLeft="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -186,7 +192,9 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:inputType="textMultiLine"
-                android:paddingLeft="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -220,8 +228,10 @@
                 android:fontFamily="@font/poppins"
                 android:hint="01/01/2024"
                 android:inputType="text"
-                android:paddingLeft="8dp"
-                android:textSize="12sp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView71" />
@@ -254,8 +264,10 @@
                 android:fontFamily="@font/poppins"
                 android:hint="01/01/2024"
                 android:inputType="text"
-                android:paddingLeft="8dp"
-                android:textSize="12sp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
