--- a/app/src/main/res/layout/fragment_club_manager_posts_pending_detail_page.xml
+++ b/app/src/main/res/layout/fragment_club_manager_posts_pending_detail_page.xml
@@ -101,7 +101,8 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
-                android:textSize="12sp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView66" />
@@ -132,6 +133,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -164,6 +166,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -195,6 +198,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -216,7 +220,7 @@
             <TextView
                 android:id="@+id/club_manager_posts_pending_detail_page_et_start_date"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
                 android:autofillHints=""
@@ -225,7 +229,8 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
-                android:textSize="12sp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tw235" />
@@ -273,6 +278,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -291,6 +297,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -310,6 +317,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -340,6 +348,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.118"
@@ -388,6 +397,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
