--- a/app/src/main/res/layout/fragment_club_manager_posts_rejected_detail_page.xml
+++ b/app/src/main/res/layout/fragment_club_manager_posts_rejected_detail_page.xml
@@ -114,7 +114,8 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
-                android:textSize="12sp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView66" />
@@ -145,6 +146,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -177,6 +179,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -208,6 +211,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -229,7 +233,7 @@
             <TextView
                 android:id="@+id/club_manager_posts_rejected_detail_page_et_start_date"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="32dp"
@@ -238,8 +242,9 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
+                android:paddingTop="6dp"
                 android:paddingEnd="8dp"
-                android:textSize="12sp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView71" />
@@ -287,7 +292,8 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
-                android:textSize="12sp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView72" />
@@ -305,6 +311,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -324,6 +331,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -354,6 +362,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.118"
@@ -401,8 +410,8 @@
                 android:background="@drawable/normal_background"
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
-                android:paddingLeft="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
