--- a/app/src/main/res/layout/fragment_club_manager_forms_pending_detail_page.xml
+++ b/app/src/main/res/layout/fragment_club_manager_forms_pending_detail_page.xml
@@ -74,8 +74,10 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
-                android:textSize="12sp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView65" />
@@ -108,7 +110,9 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -127,7 +131,9 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -158,7 +164,9 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -189,8 +197,10 @@
                 android:clickable="false"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
-                android:textSize="12sp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView71" />
@@ -220,8 +230,10 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
-                android:textSize="12sp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
