--- a/app/src/main/res/layout/fragment_club_manager_posts_approved_detail_page.xml
+++ b/app/src/main/res/layout/fragment_club_manager_posts_approved_detail_page.xml
@@ -114,7 +114,8 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
-                android:textSize="12sp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView66" />
@@ -142,6 +143,7 @@
                 android:autofillHints=""
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
@@ -176,6 +178,7 @@
                 android:ems="10"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:fontFamily="@font/poppins"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -209,6 +212,7 @@
                 android:textSize="12sp"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView70" />
@@ -229,7 +233,7 @@
             <TextView
                 android:id="@+id/club_manager_posts_approved_detail_page_et_start_date"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="32dp"
@@ -238,8 +242,9 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
+                android:paddingTop="6dp"
                 android:paddingEnd="8dp"
-                android:textSize="12sp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView71" />
@@ -286,8 +291,9 @@
                 android:ems="10"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 android:fontFamily="@font/poppins"
-                android:textSize="12sp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView72" />
@@ -325,6 +331,7 @@
                 android:textSize="12sp"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
+                android:paddingTop="6dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -372,7 +379,8 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
-                android:textSize="12sp"
+                android:paddingTop="6dp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.118"
                 app:layout_constraintStart_toStartOf="parent"
@@ -419,7 +427,7 @@
                 android:fontFamily="@font/poppins"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
-                android:paddingLeft="8dp"
+                android:paddingTop="6dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
