--- a/app/src/main/res/layout/fragment_sks_admin_club_info_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_club_info_detail.xml
@@ -131,13 +131,15 @@
 
     <TextView
         android:id="@+id/sks_admin_club_info_detail_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
+        android:layout_width="158dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="7dp"
         android:fontFamily="@font/poppins"
         android:text="Okul"
         android:textSize="11sp"
+        app:layout_constraintEnd_toStartOf="@+id/sks_admin_club_info_detail_decsription"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView51" />
 
@@ -247,12 +249,14 @@
 
     <TextView
         android:id="@+id/sks_admin_club_info_detail_web_platform"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="158dp"
+        android:layout_height="35dp"
         android:layout_marginStart="32dp"
-        android:textSize="11sp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="7dp"
         android:text="Zoom"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toStartOf="@+id/sks_admin_club_info_detail_decsription"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView82" />
 </androidx.constraintlayout.widget.ConstraintLayout>
