--- a/app/src/main/res/layout/fragment_sks_admin_club_info_detail.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_club_info_detail.xml
@@ -198,10 +198,10 @@
         android:id="@+id/sks_admin_club_info_detail_manager"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:background="#20220234"
+        android:background="#7C000000"
         android:fontFamily="@font/poppins"
         android:gravity="center"
-        android:text="TextView"
+        android:textColor="@color/white"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@+id/sks_admin_club_info_detail_photo"
         app:layout_constraintEnd_toEndOf="@+id/sks_admin_club_info_detail_photo"
@@ -215,7 +215,7 @@
         android:layout_marginBottom="72dp"
         android:fontFamily="@font/poppins"
         android:gravity="center"
-        android:text="TextView"
+        android:textColor="@color/white"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/sks_admin_club_info_detail_photo"
