--- a/app/src/main/res/layout/fragment_club_manager_profile_my_activities_detail.xml
+++ b/app/src/main/res/layout/fragment_club_manager_profile_my_activities_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.home.clubManager.profilePages.ClubManagerProfileMyActivitiesDetail">
 
     <ImageView
@@ -121,13 +122,15 @@
 
     <TextView
         android:id="@+id/club_admin_profile_my_activities_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/poppins"
         android:text="Okul"
         android:textSize="11sp"
+        app:layout_constraintEnd_toStartOf="@+id/club_admin_profile_my_activities_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView51" />
 
@@ -186,10 +189,10 @@
         android:id="@+id/club_admin_profile_my_activities_manager"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:background="#20220234"
+        android:background="#7C000000"
+        android:textColor="@color/white"
         android:fontFamily="@font/poppins"
         android:gravity="center"
-        android:text="TextView"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@+id/club_manager_profile_my_activities_photo"
         app:layout_constraintEnd_toEndOf="@+id/club_manager_profile_my_activities_photo"
@@ -202,8 +205,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="72dp"
         android:fontFamily="@font/poppins"
+        android:textColor="@color/white"
         android:gravity="center"
-        android:text="TextView"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/club_manager_profile_my_activities_photo"
