--- a/app/src/main/res/layout/fragment_club_manager_club_activties_detail.xml
+++ b/app/src/main/res/layout/fragment_club_manager_club_activties_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.home.clubManager.ClubManagerClubActivtiesDetailFragment">
 
     <TextView
@@ -131,13 +132,16 @@
 
     <TextView
         android:id="@+id/club_manager_club_activities_detail_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
+        android:layout_width="157dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/poppins"
         android:text="Okul"
         android:textSize="11sp"
+        app:layout_constraintEnd_toStartOf="@+id/club_manager_club_activities_detail_description"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView51" />
 
@@ -196,10 +200,10 @@
         android:id="@+id/club_manager_club_activities_detail_manager"
         android:layout_width="0dp"
         android:layout_height="100dp"
-        android:background="#20220234"
+        android:background="#7C000000"
         android:fontFamily="@font/poppins"
         android:gravity="center"
-        android:text="TextView"
+        android:textColor="@color/white"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@+id/club_manager_club_activities_detail_photo"
         app:layout_constraintEnd_toEndOf="@+id/club_manager_club_activities_detail_photo"
@@ -213,7 +217,7 @@
         android:layout_marginBottom="72dp"
         android:fontFamily="@font/poppins"
         android:gravity="center"
-        android:text="TextView"
+        android:textColor="@color/white"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/club_manager_club_activities_detail_photo"
@@ -255,4 +259,5 @@
         android:textSize="11sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView82" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
