--- a/app/src/main/res/layout/fragment_club_manager_profile_edit_request.xml
+++ b/app/src/main/res/layout/fragment_club_manager_profile_edit_request.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.home.clubManager.profilePages.ClubManagerProfileEditRequestFragment">
 
     <ImageView
@@ -187,10 +188,10 @@
         android:id="@+id/club_admin_profile_my_activities_edit_manager"
         android:layout_width="0dp"
         android:layout_height="120dp"
-        android:background="#20220234"
         android:fontFamily="@font/poppins"
         android:gravity="center"
-        android:text="TextView"
+        android:background="#7C000000"
+        android:textColor="@color/white"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@+id/club_manager_profile_my_activities_edit_photo"
         app:layout_constraintEnd_toEndOf="@+id/club_manager_profile_my_activities_edit_photo"
@@ -204,7 +205,7 @@
         android:layout_marginBottom="72dp"
         android:fontFamily="@font/poppins"
         android:gravity="center"
-        android:text="TextView"
+        android:textColor="@color/white"
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/club_manager_profile_my_activities_edit_photo"
