--- a/app/src/main/res/layout/fragment_sks_admin_clubs.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_clubs.xml
@@ -4,7 +4,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+
     tools:context=".ui.home.sksAdmin.clubsFragment.SksAdminClubsFragment">
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_social_activisim"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/normal_background"
+        android:backgroundTint="#F0F0F0"
+        android:fontFamily="@font/poppins"
+
+        android:text="Social Activisim"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_health" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_technology"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="4dp"
+
+        android:background="@drawable/normal_background"
+        android:backgroundTint="#F0F0F0"
+        android:fontFamily="@font/poppins"
+        android:text="Technology"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_sports" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_art"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/normal_background"
+        android:backgroundTint="#F0F0F0"
+        android:fontFamily="@font/poppins"
+        android:text="Art"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_academic" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_health"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/normal_background"
+        android:backgroundTint="#F0F0F0"
+        android:fontFamily="@font/poppins"
+        android:text="Health"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sks_admin_clubs_fragment_search_bar" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_sports"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="12dp"
+
+        android:background="@drawable/normal_background"
+        android:backgroundTint="#F0F0F0"
+        android:fontFamily="@font/poppins"
+        android:text="Sports"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sks_admin_clubs_fragment_search_bar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/sks_admin_clubs_fragment_rv"
@@ -12,9 +89,9 @@
         android:layout_height="600dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -35,8 +112,8 @@
         android:layout_width="0dp"
         android:layout_height="26dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="64dp"
         android:background="@drawable/normal_background"
         android:backgroundTint="#EBEBEB"
         app:iconifiedByDefault="false"
@@ -68,4 +145,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_academic"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/normal_background"
+        android:backgroundTint="#F0F0F0"
+        android:fontFamily="@font/poppins"
+        android:text="Academic"
+        android:textSize="10sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sks_admin_clubs_fragment_search_bar" />
+
+    <ImageView
+        android:id="@+id/btn_clear_filter"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="32dp"
+        android:src="@drawable/cancel_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
