--- a/app/src/main/res/layout/fragment_student_calendar_info.xml
+++ b/app/src/main/res/layout/fragment_student_calendar_info.xml
@@ -122,13 +122,16 @@
 
     <TextView
         android:id="@+id/sks_admin_club_info_detail_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="33dp"
+        android:layout_width="0dp"
+        android:layout_height="37dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/poppins"
         android:text="Okul"
         android:textSize="11sp"
+        app:layout_constraintEnd_toStartOf="@+id/sks_admin_club_info_detail_decsription"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView51" />
 
