--- a/app/src/main/res/layout/activity_intro_main_activitiy.xml
+++ b/app/src/main/res/layout/activity_intro_main_activitiy.xml
@@ -2,17 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UcuncuActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/club_manager_calendar_fragment_recycler_view"
-        android:layout_width="409dp"
-        android:layout_height="657dp"
-        android:layout_marginBottom="1dp"
+    android:background="@drawable/intro_fragments_background_image"
+    tools:context=".ui.login.login.loginActivity.IntroMainActivitiy">
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/intro_first" />
 </androidx.constraintlayout.widget.ConstraintLayout>
