--- a/app/src/main/res/layout/fragment_club_manager_calendar_info.xml
+++ b/app/src/main/res/layout/fragment_club_manager_calendar_info.xml
@@ -48,13 +48,16 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="120dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="32dp"
         android:fontFamily="@font/poppins"
         android:text="End Date"
         android:textSize="16dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/club_manager_calendar_info_detail_web_contacts" />
 
     <TextView
@@ -117,8 +120,8 @@
         android:id="@+id/club_manager_calendar_info_detail_end_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="56dp"
         android:background="@drawable/normal_background"
         android:backgroundTint="#BDDCEA"
         android:fontFamily="@font/poppins"
@@ -136,9 +139,8 @@
         android:layout_height="30dp"
         android:layout_marginStart="33dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="16dp"
         android:fontFamily="@font/poppins"
-        android:text="Okul"
         android:textSize="11sp"
         app:layout_constraintEnd_toStartOf="@+id/club_manager_calendar_info_detail_description"
         app:layout_constraintStart_toStartOf="parent"
@@ -151,7 +153,6 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/poppins"
-        android:text="+90 555 325 23 23"
         android:textSize="11sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView52" />
@@ -177,11 +178,12 @@
         android:layout_marginStart="204dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/poppins"
-        android:text="Indulge in the enchanting world of poetry at our upcoming event, &quot;Poetry Hour: A Celebration of Verses,&quot; hosted by the Literature Club. Join fellow poetry enthusiasts for an evening filled with captivating recitations, insightful discussions, and heartfelt expressions of creativity."
         android:textSize="11sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView55" />
+        app:layout_constraintTop_toBottomOf="@+id/textView55"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView64"
@@ -255,8 +257,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="Zoom"
+        android:layout_marginEnd="16dp"
         android:textSize="11sp"
+        app:layout_constraintEnd_toStartOf="@+id/club_manager_calendar_info_detail_description"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView82" />
 </androidx.constraintlayout.widget.ConstraintLayout>
