--- a/app/src/main/res/layout/fragment_sks_admin_calendar.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_calendar.xml
@@ -36,6 +36,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="40dp"
+        tools:listitem="@layout/sks_admin_calendar_fragment_card_view"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
