--- a/app/src/main/res/layout/sks_admin_calendar_fragment_card_view.xml
+++ b/app/src/main/res/layout/sks_admin_calendar_fragment_card_view.xml
@@ -24,30 +24,29 @@
 
             <ImageView
                 android:id="@+id/clubPhoto"
-                android:layout_width="325dp"
+                android:layout_width="match_parent"
                 android:layout_height="140dp"
                 android:clipToOutline="true"
                 android:scaleType="centerCrop"
-                android:background="@drawable/circular_background"
-                android:layout_marginTop="2dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
                 tools:srcCompat="@drawable/image_deneme" />
 
             <TextView
                 android:id="@+id/activityName"
-                android:layout_width="309dp"
-                android:layout_height="29dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_width="316dp"
+                android:layout_height="38dp"
+                android:layout_marginTop="18dp"
+                android:fontFamily="@font/poppins"
                 android:gravity="center"
-                android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.48"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/clubPhoto"
-                app:layout_constraintVertical_bias="0.94" />
+                app:layout_constraintTop_toBottomOf="@+id/clubPhoto" />
 
             <TextView
                 android:id="@+id/activityMonthAndDate"
@@ -57,7 +56,7 @@
                 android:background="#6ABCD7"
                 android:gravity="center"
                 android:text="23/04"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toTopOf="@+id/activityYear"
                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -69,7 +68,7 @@
                 android:background="#BDDCEA"
                 android:gravity="center"
                 android:text="2024"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/clubPhoto" />
 
