Fixed design issues

--- a/app/src/main/res/layout/fragment_club_manager_create_post.xml
+++ b/app/src/main/res/layout/fragment_club_manager_create_post.xml
@@ -41,7 +41,7 @@
         android:ems="10"
         android:fontFamily="@font/poppins"
         android:gravity="left"
-        android:inputType="text"
+        android:inputType="none"
         android:paddingLeft="8dp"
         android:paddingTop="8dp"
         android:textSize="16sp"
@@ -66,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/poppins"
         android:text="Title"
         android:textSize="14sp"
@@ -118,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/poppins"
         android:text="Scheduled Posting"
         android:textSize="14sp"
@@ -218,7 +218,7 @@
         android:ems="10"
         android:fontFamily="@font/poppins"
         android:gravity="left"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:paddingLeft="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -227,7 +227,7 @@
     <TextView
         android:id="@+id/create_posts_et_attachment"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/normal_background"
@@ -247,7 +247,7 @@
         android:ems="10"
         android:fontFamily="@font/poppins"
         android:gravity="left"
-        android:inputType="text"
+        android:inputType="none"
         android:paddingLeft="8dp"
         android:paddingTop="8dp"
         android:textSize="16sp"
@@ -296,28 +296,6 @@
         android:textSize="11sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_posts_et_attachment" />
-
-    <CalendarView
-        android:id="@+id/start_date_calendar_view"
-        android:layout_width="353dp"
-        android:layout_height="310dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/normal_background"
-        android:focusable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_posts_et__title" />
-
-    <CalendarView
-        android:id="@+id/end_date_calendar_view"
-        android:layout_width="353dp"
-        android:layout_height="310dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/normal_background"
-        android:focusable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_posts_et__title" />
 
     <TextView
         android:id="@+id/textView59"
