--- a/app/src/main/res/layout/fragment_club_manager_create_form_page.xml
+++ b/app/src/main/res/layout/fragment_club_manager_create_form_page.xml
@@ -228,7 +228,7 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:hint="01/01/2024"
-                android:inputType="text"
+                android:inputType="none"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
                 android:paddingTop="6dp"
@@ -264,7 +264,7 @@
                 android:ems="10"
                 android:fontFamily="@font/poppins"
                 android:hint="01/01/2024"
-                android:inputType="text"
+                android:inputType="none"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
                 android:paddingTop="6dp"
